# egrader

./: .gitignore  CITATION.cff  README.md  cloner.py  pyproject.toml  rules_template.yml  setup.cfg
.github/workflows/: cov.yml  tests.yml
egrader/: Check.py  Repo.py  Reposit.py  Repository.py  Results.py  Student.py  assess.py  cli.py  cli_bin.py  cli_lib.py  cli_old.py  common.py  fetch.py  git.py  paths.py  plugin.py  plugins.py  plugins_helper.py  report.py  types.py  yaml.py
egrader/plugins/: helpers.py  inter_repo.py  repo.py  report.py
egraderng/: pyproject.toml
egraderng/doc/: mkdocs.yml
egraderng/doc/docs/: dev.md  index.md  reference.md  usage.md
egraderng/doc/overrides/partials/: copyright.html
egraderng/egrader/: __init__.py  __main__.py  config.py  main.py  rules_loader.py
egraderng/egrader/cli/: __init__.py  assess.py  fetch.py  plugins.py  report.py
egraderng/egrader/core/: __init__.py  config.py  constants.py  fetch.py  git.py  yaml.py
egraderng/egrader/plugins/loader/: __init__.py  yaml_loader.py
egraderng/src/egrader/: __main__.py  main.py  plugin_manager.py
egraderng/src/egrader/cli/: fetch.py  plugins.py
egraderng/src/egrader/core/: fetch.py  gitcmd.py
egraderng/src/egrader/plugins/: __init__.py
egraderng/src/egrader/plugins/loader/: json_loader.py
egraderng/tests/: __init__.py  conftest.py  test_main.py
egraderng/tests/cli/: __init__.py
egraderng/tests/core/: __init__.py  conftest.py  test_fetch.py
examples/: rules_template.yml
exercise-grader/: Commit.py  Student.py  cli.py
lp1_exercise_grader/: Commit.py  Project.py  Repo.py  Student.py  cli.py
src/egrader/: cli_bin.py  fetch.py  git.py  paths.py  report.py  types.py  yaml.py
src/egrader/plugins/: __init__.py  helpers.py  inter_repo.py  report.py
tests/: conftest.py
tests/plugins/: __init__.py  conftest.py  test_repo.py
