[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = [
    "validators",
    "sh"
]
ignore_missing_imports = true

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/options.html
profile = "black"
src_paths = ["egrader"]
line_length = 88
skip_gitignore = "True"
