[metadata]
name = Exercise Grader
version = 0.0.1
author = Nuno Fachada
author_email = nuno.fachada@ulusofona.pt
description = An auto-grader for simple programming exercises
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = aat, education, autograder, programming
license = GPL-3
url = https://github.com/VideojogosLusofona/exercise-grader
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License (GPL)
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Education

[options]
packages = egrader
python_requires = >= 3.8
install_requires =
    pyyaml
    requests
    sh
    yarl
    validators

[options.entry_points]
console_scripts =
    egrader = egrader.cli:main

[options.extras_require]
dev =
    black
    flake8
    flake8-black
    flake8-builtins
    flake8-bugbear
    flake8-comprehensions
    flake8-isort
    flake8-simplify
    isort
    pep8-naming

[flake8]
extend-select = B9,C4
max-line-length = 88
max-doc-length = 88
ignore = B018, SIM106, W503
doctests = True
exclude =
    .git,
    __pycache__,
    .*cache,
    build,
    dist,
    env,
    venv,
    .eggs,
    *.egg
# flake8-docstrings
docstring-convention = google
